--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "socket.io-client": "^2.3.0",
+    "typescript": "^3.9.10",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
