--- a/client/package.json
+++ b/client/package.json
@@ -3,18 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.6.0",
-    "bootstrap": "^4.6.0",
-    "react": "^17.0.1",
-    "react-bootstrap": "^1.5.0",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
-    "socket.io-client": "^2.3.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^15.0.6",
+    "@testing-library/user-event": "^14.4.3",
+    "bootstrap": "^5.2.3",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "socket.io-client": "^4.5.4",
     "socket.io-mock-ts": "^1.0.2",
-    "typescript": "^3.9.10",
-    "web-vitals": "^0.2.4"
+    "typescript": "^4.9.4",
+    "web-vitals": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,5 +39,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-plugin-jest": "^25.7.0",
+    "eslint-plugin-testing-library": "^5.11.1"
   }
 }
