--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.5.0",
     "express": "^4.17.1",
-    "firebase": "^11.6.1",
+    "firebase-admin": "^13.4.0",
     "socket.io": "^2.2.0"
   }
 }
