--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.5.0",
     "express": "^4.17.1",
     "firebase-admin": "^13.4.0",
+    "redis": "^5.1.1",
     "socket.io": "^2.2.0"
   }
 }
