--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-svg": "^16.3.0",
     "socket.io-client": "^2.3.0",
     "socket.io-mock-ts": "^1.0.2",
     "typescript": "^4.9.4",
